# s3a-14-time-tracker

./: .coverage  pyproject.toml  pytest.ini  requirements.txt  test_output.txt
tests/: conftest.py  test_cli.py  test_report_generator.py  test_repositories.py  test_timer_service.py
ttracker/: backup.py  cli.py  database.py  db.py  models.py  report.py  timer.py
ttracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ttracker/commands/: __init__.py  backup_command.py  log_command.py  project_command.py  report_command.py  timer_command.py
ttracker/reports/: __init__.py  report_formatter.py  report_generator.py
ttracker/repositories/: __init__.py  budget_repository.py  project_repository.py  tag_repository.py  time_entry_repository.py
ttracker/services/: __init__.py  timer_service.py
