[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ttracker"
version = "0.1.0"
description = "命令行项目工时追踪工具"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
tt = "ttracker.cli:cli"

[tool.setuptools.packages.find]
include = ["ttracker*"]
